# Steward

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  COVERAGE_PLAN.md  Cargo.toml  Dockerfile  Dockerfile.test  Dockerfile.worker  FEATURE_PARITY.md  README.ja.md  README.md  README.ru.md  README.zh-CN.md  build.rs  clippy.toml  docker-compose.yml  providers.json  steward.bash  steward.fish  steward.zsh  tauri.conf.json
.cargo/: config.toml
.claude/agents/: research.md
.claude/commands/: add-sse-event.md  add-tool.md  fix-issue.md  pr-shepherd.md  respond-pr.md  review-crate.md  review-pr.md  ship.md  trace.md
.claude/rules/: skills.md  tools.md
.githooks/: pre-push
.github/scripts/: create-labels.sh  pr-labeler.sh
.github/workflows/: claude-review.yml  coverage.yml  e2e.yml  regression-test-check.yml  release.yml  test.yml
.trellis/: .template-hashes.json
benches/: safety_check.rs  safety_pipeline.rs
capabilities/: default.json
crates/steward_common/: Cargo.toml
crates/steward_common/src/: event.rs  lib.rs
crates/steward_safety/: Cargo.toml
docs/: LLM_PROVIDERS.md  USER_MANAGEMENT_API.md  developer-bootstrap.md  release-readiness.md  smart-routing-spec.md  user-guide.md
docs/plans/: 2026-03-30-ironcowork-desktop-first-transformation.md  2026-03-31-ironcowork-post-phase1-execution-roadmap.md  2026-03-31-phase1-runtime-smoke-checklist.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_tool_params.rs
icons/: icon.icns
migrations/: V1__initial.sql  V8__settings.sql
node-compile-cache/v22.18.0-arm64-9e3ad1fa-502/: 00ab7451  00f39d49  033ef25e  03db8587  042dcc8d  068b559f  09f9a126  0caa29cd  0d43ee09  0da0551a  0dc1af01  0f61f183  11921bbb  1192c12b  14dc2b4f  157cf286  160974bd  186ce749  1969b2b3  1a091091  1b0afaf0  20eca88f  21075cf7  21e3b248  23747d3c  2468f59c  27d923e5  2a14dbeb  2dc8b18c  2ff00ba4  33a10efc  33a6136b  33c847b8  3b51e672  3e1fce4e  437a762e  448b691a  45073324  46052915  46a4e3bc  (+55 more)
registry/: _bundles.json
registry/tools/: github.json  gmail.json  google-calendar.json  google-docs.json  google-drive.json  google-sheets.json  google-slides.json  llm-context.json  slack.json  telegram.json  web-search.json
scripts/: build-wasm-extensions.sh  check-boundaries.sh  check-version-bumps.sh  dev-setup.sh
scripts/ci/: delta_lint.sh  quality_gate.sh
skills/delegation/: SKILL.md
skills/ironclaw-workflow-orchestrator/: SKILL.md
skills/local-test/: SKILL.md
skills/review-checklist/: SKILL.md
skills/routine-advisor/: SKILL.md
skills/web-ui-test/: SKILL.md
src/: api.rs  app.rs  boot_screen.rs  bootstrap.rs  desktop_runtime.rs  error.rs  file_archive_workflow.rs  ipc.rs  lib.rs  main.rs  retrieval.rs  runtime_events.rs  service.rs  settings.rs  task_runtime.rs  task_templates.rs  tauri_commands.rs  tenant.rs  timezone.rs  tracing_fmt.rs  util.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
src/agent/: CLAUDE.md  agent_loop.rs  agentic_loop.rs  attachments.rs  commands.rs  compaction.rs  cost_guard.rs  dispatcher.rs  heartbeat.rs  job_monitor.rs  mod.rs  routine.rs  routine_engine.rs  scheduler.rs  session.rs  session_manager.rs  submission.rs  thread_ops.rs
src/brain/: activation_engine.rs  associative.rs  dream_engine.rs  episodic.rs  events.rs  mod.rs  working_memory.rs
src/channels/: channel.rs  manager.rs  mod.rs  repl.rs
src/cli/: api.rs  completion.rs  config.rs  desktop.rs  doctor.rs  fmt.rs  hooks.rs  import.rs  mcp.rs  memory.rs  mod.rs  models.rs  oauth_defaults.rs  registry.rs  routines.rs  service.rs  skills.rs  status.rs  tool.rs
src/config/: agent.rs  brain.rs  channels.rs  claude_code.rs  conversation_recall.rs  database.rs  embeddings.rs  helpers.rs  hygiene.rs  llm.rs  memory_recall.rs  mod.rs  relay.rs  safety.rs  sandbox.rs  search.rs  skills.rs  tunnel.rs  wasm.rs  workspace.rs
src/context/: manager.rs
src/conversation_recall/: mod.rs
src/db/: CLAUDE.md  libsql_migrations.rs  mod.rs  postgres.rs
src/extensions/: discovery.rs  manager.rs  mod.rs  registry.rs  setup_schema.rs
src/history/: mod.rs  store.rs
src/hooks/: bootstrap.rs  bundled.rs
src/import/: mod.rs
src/llm/: CLAUDE.md  anthropic_oauth.rs  bedrock.rs  codex_auth.rs  codex_chatgpt.rs  codex_test_helpers.rs  config.rs  disabled.rs  gemini_oauth.rs  mod.rs  nearai_chat.rs  oauth_helpers.rs  openai_codex_provider.rs  openai_codex_session.rs  provider.rs  reasoning.rs  reasoning_models.rs  recording.rs  registry.rs  reloadable.rs  response_cache.rs  retry.rs  rig_adapter.rs  session.rs  smart_routing.rs  token_refreshing.rs
src/memory/: README.md  mod.rs  nocturne_parity_tests.rs  nocturne_system_prompt_native.md  search_terms.rs
src/observability/: log.rs  traits.rs
src/orchestrator/: api.rs  job_manager.rs
src/pairing/: mod.rs  (+1 more)
static/: index.html
tests/: api_http_integration.rs  batch_last_run_status_tests.rs  batch_query_tests.rs  config_round_trip.rs  dispatched_routine_run_tests.rs  e2e_advanced_traces.rs  e2e_attachments.rs  e2e_builtin_tool_coverage.rs  e2e_metrics_test.rs  e2e_recorded_trace.rs  e2e_routine_heartbeat.rs  e2e_spot_checks.rs  e2e_status_events.rs  e2e_thread_id_isolation.rs  e2e_thread_scheduling.rs  e2e_tool_coverage.rs  e2e_tool_param_coercion.rs  e2e_trace_file_tools.rs  e2e_wasm_github_coercion.rs  e2e_worker_coverage.rs  e2e_workspace_coverage.rs  html_to_markdown.rs  identity_scope_isolation.rs  import_openclaw.rs  import_openclaw_comprehensive.rs  import_openclaw_e2e.rs  import_openclaw_errors.rs  import_openclaw_idempotency.rs  import_openclaw_integration.rs  layered_memory.rs  libsql_workspace_integration.rs  module_init_integration.rs  multi_scope_functional.rs  multi_tenant_system_prompt.rs  pairing_integration.rs  provider_chaos.rs  shell_risk_regression.rs  support_unit_tests.rs  tool_schema_validation.rs  wit_compat.rs
ui/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
wix/: main.wxs
(+312 files in other folders)
