[workspace]
members = [".", "crates/steward_common", "crates/steward_safety"]
exclude = [
    "tools-src/github",
    "tools-src/gmail",
    "tools-src/google-calendar",
    "tools-src/google-docs",
    "tools-src/google-drive",
    "tools-src/google-sheets",
    "tools-src/google-slides",
    "tools-src/slack",
    "tools-src/telegram",
    "fuzz",
    "crates/steward_safety/fuzz",
]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[package]
name = "steward"
version = "0.22.0"
edition = "2024"
rust-version = "1.92"
description = "Desktop-first autonomous AI coworker for local knowledge work"
authors = ["Steward contributors"]
license = "MIT OR Apache-2.0"

[lib]
name = "steward_core"
path = "src/lib.rs"

[[bin]]
name = "steward"
path = "src/main.rs"


[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
eventsource-stream = "0.2"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls-native-roots", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database - libSQL/Turso (default embedded database)
libsql = { version = "0.9.30", default-features = false, features = ["core", "replication", "remote", "tls"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
dotenvy = "0.15"
toml = "0.8"

# Core types
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
iana-time-zone = "0.1"
rust_decimal = { version = "1", features = ["serde", "serde-with-str", "maths"] }
rust_decimal_macros = "1"

# Async traits
async-trait = "0.1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Terminal
crossterm = "0.29"
rustyline = { version = "17", features = ["custom-bindings", "derive", "with-file-history"] }
termimad = "0.34"

# Channel integrations
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "set-header", "catch-panic", "fs"] }

# Cron scheduling for routines
cron = "0.13"

# Shared types
steward_common = { path = "crates/steward_common", version = "0.1.0" }

# Safety/sanitization
steward_safety = { path = "crates/steward_safety", version = "0.2.0" }
regex = "1"
aho-corasick = "1"

# YAML parsing for SKILL.md frontmatter
serde_yml = "0.0.12"

# Filesystem paths
dirs = "6"
fs4 = "0.6"

# Semantic versioning
semver = "1"

# Secrecy for sensitive values
secrecy = { version = "0.10", features = ["serde"] }

# URL parsing and encoding
url = "2"
urlencoding = "2"

# Open URLs in browser
open = "5"


# WASM sandbox for untrusted tool execution
wasmtime = { version = "28", features = ["component-model"] }
wasmtime-wasi = "28"  # WASI support for component model
wasmparser = "0.220"  # WASM binary parsing for validation

# Cryptography for secrets management
aes-gcm = "0.10"
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
blake3 = "1"
rand = "0.8"
subtle = "2"  # Constant-time comparisons for token validation

# Multi-provider LLM support
rig-core = { version = "0.30", default-features = false, features = ["reqwest-rustls"] }

# Docker sandbox
bollard = "0.18"

# Archive extraction for WASM extension bundles
flate2 = "1"
tar = "0.4"

# Document text extraction
pdf-extract = "0.7"
zip = { version = "2", default-features = false, features = ["deflate"] }

# HTTP proxy for sandboxed network access
hyper = { version = "1.5", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["server", "tokio", "http1", "http2"] }
http-body-util = "0.1"
bytes = "1"
base64 = "0.22.1"
jsonwebtoken = "9"
mime_guess = "2.0.5"
clap_complete = "4.5.0"
lru = "0.16.3"

# HTML to Markdown conversion (feature gated)
html-to-markdown-rs = { version = "2.3", optional = true }
readabilityrs = { version = "0.1.2", optional = true }
ed25519-dalek = { version = "2.2.0", features = ["std"] }
hex = "0.4.3"

# OpenClaw import (feature gated)
json5 = { version = "0.4", optional = true }

# Desktop (Tauri)
tauri = { version = "2.0.0", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-notification = "2.0.0"

# macOS keychain
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"
objc2-app-kit = { version = "0.3.2", features = ["NSColor", "NSView", "NSWindow"] }
objc2-quartz-core = { version = "0.3.2", features = ["CALayer"] }

# PTY allocation for Claude CLI stdout buffering fix (Unix only)
[target.'cfg(unix)'.dependencies]
pty-process = { version = "0.5", features = ["async"] }

# Linux secret-service (GNOME Keyring, KWallet)
[target.'cfg(target_os = "linux")'.dependencies]
secret-service = { version = "4", features = ["rt-tokio-crypto-rust"] }
zbus = "4"

[dev-dependencies]
tokio-test = "0.4"
tracing-test = "0.2"
pretty_assertions = "1"
tempfile = "3"
insta = "1.46.3"
criterion = "0.5"

[[bench]]
name = "safety_check"
harness = false

[[bench]]
name = "safety_pipeline"
harness = false

[features]
default = ["libsql", "html-to-markdown"]
libsql = []
# Opt-in feature for especially heavy integration-test targets that run in a
# dedicated CI job instead of the default Rust test matrix.
integration = []
html-to-markdown = ["dep:html-to-markdown-rs", "dep:readabilityrs"]
import = ["dep:json5", "libsql"]

[[test]]
name = "e2e_thread_scheduling"
required-features = ["libsql", "integration"]

[[test]]
name = "html_to_markdown"
required-features = ["html-to-markdown"]

[profile.release]
strip = true          # Remove debug symbols from release binaries
