[package]
name = "ironcowork-tauri"
version = "0.1.0"
edition = "2021"

[workspace]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-notification = "2.0.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
