[package]
name = "steward-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
steward_core = { path = "..", package = "steward" }
steward_common = { path = "../crates/steward_common", version = "0.1.0" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-notification = "2.0.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", features = ["NSColor", "NSView", "NSWindow"] }
objc2-quartz-core = { version = "0.3.2", features = ["CALayer"] }
